# ThieleMD

./: CMakeLists.txt  README  inputs.txt  test.cpp
src/: cell.cpp  cell.hpp  datamanager.cpp  datamanager.hpp  grid.cpp  grid.hpp  main.cpp  particle.cpp  particle.hpp  simulation.cpp  simulation.hpp  skyrmion.cpp  skyrmion.hpp  vortex.cpp  vortex.hpp
