# minimum version for cmake
cmake_minimum_required(VERSION 2.8)

# project's name
project(MolecularDynamics)

# define some constant we'll use as compiler flags
SET(COMPILER_FLAGS "-march=native")
add_definitions(${COMPILER_FLAGS})

# define location for produced binaries
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})

# NOTE: running cmake generates a makefile with explicitly named .x files, so
# every time a new .c, .cpp or .h file is added cmake should be run in order to
# generate a makefile which includes the new file.
file(GLOB SRC_FILES
  "src/*.c"
  "src/*.h"
  "src/*.cpp"
  "src/*.hpp"
)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
set(CMAKE_CXX_STANDARD 14)

include_directories(${X11_INCLUDE_DIR})

find_package(Boost REQUIRED COMPONENTS system thread)

add_executable(a.out ${SRC_FILES})

target_link_libraries(a.out m boost_system boost_thread fftw3)
